--- a/mega_money/package.json
+++ b/mega_money/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@metamask/sdk-react": "^0.31.4",
+    "framer-motion": "^12.0.11",
+    "lucide-react": "^0.474.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
