--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -9,8 +7,8 @@ services:
     expose:
       - "3000"
     networks:
-      - my_network
+      - megamoney_network
 
 networks:
-  my_network:
+  megamoney_network:
     external: true
