--- a/mega_money/package.json
+++ b/mega_money/package.json
@@ -3,24 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@metamask/sdk-react": "^0.32.0",
+    "@tonconnect/ui-react": "^2.0.11",
     "framer-motion": "^12.0.11",
     "lucide-react": "^0.474.0",
-    "next": "15.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "14.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
