--- a/mega_money/package.json
+++ b/mega_money/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^15.1.7",
     "@tonconnect/ui-react": "^2.0.11",
     "framer-motion": "^12.0.11",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.474.0",
     "next": "14.2",
     "react": "18.2.0",
